Fix filename wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -276,9 +276,9 @@ body {
     height: 100%;
     width: 100%;
     position: absolute;
-    background: linear-gradient(rgba(255,255,255,0),rgba(255,255,255,.08));
+    background: linear-gradient(rgba(255,255,255,0),rgba(255,255,255,.06));
     display: block;
-    z-index: 500;
+    z-index: 16;
     pointer-events: none;
 }
 
@@ -389,9 +389,9 @@ body {
 .filelink, .folderlink {
     line-height: 1.5em;
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    margin-top: 1px;
     text-overflow: ellipsis;
-    top: 1px;
     white-space: nowrap;
     width: calc(100% - 10em);
 }
